Fixed Spacing Issue

--- a/work.css
+++ b/work.css
@@ -124,7 +124,7 @@ nav {
     float: left;
     width: 250px;
     height: auto;
-    padding-bottom: 5rem;
+    padding-bottom: 6.5rem;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     border-top-right-radius: 15px;
